--- a/composer.json
+++ b/composer.json
@@ -1,22 +1,27 @@
 {
-	"name" : "portalium/portalium-template",
-	"description" : "Module Template for Portalium",
-	"type" : "yii2-extension",
+	"name" : "portalium/portalium-theme",
+	"description" : "Portalium Theme Module",
+	"type" : "portalium-theme",
 	"license": "MIT",
 	"homepage" : "https://portalium.dev",
 	"authors" : [
 		{
 			"name" : "Uğur YILDIZ",
-			"email" : "yildiz@diginova.com.tr",
+			"email" : "ugur.yildiz@diginova.com.tr",
 			"homepage" : "https://uguryildiz.net"
 		}
 	],
 	"support" : {
-		"issues" : "https://github.com/portalium/portalium-template/issues"
+		"issues" : "https://github.com/portalium/portalium-theme/issues"
 	},
+	"require" : {
+		"yiisoft/yii2": "~2.0.15",
+		"yiisoft/yii2-bootstrap5": "*",
+		"yiisoft/yii2-swiftmailer": "~2.0.0"
+	 },
 	"autoload" : {
 		"psr-4" : {
-			"portalium\\template\\" : "src/"
+			"portalium\\theme\\" : "src/"
 		}
 	}
 }
