--- a/composer.json
+++ b/composer.json
@@ -7,18 +7,13 @@
 	"authors" : [
 		{
 			"name" : "Uğur YILDIZ",
-			"email" : "ugur.yildiz@diginova.com.tr",
+			"email" : "yildiz@diginova.com.tr",
 			"homepage" : "https://uguryildiz.net"
 		}
 	],
 	"support" : {
 		"issues" : "https://github.com/portalium/portalium-theme/issues"
 	},
-	"require" : {
-		"yiisoft/yii2": "~2.0.15",
-		"yiisoft/yii2-bootstrap5": "*",
-		"yiisoft/yii2-swiftmailer": "~2.0.0"
-	 },
 	"autoload" : {
 		"psr-4" : {
 			"portalium\\theme\\" : "src/"
