--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
-	"name" : "portalium/portalium-theme",
-	"description" : "Portalium Theme Module",
+	"name" : "portalium/yii2-theme",
+	"description" : "Theme Store Module for Portalium(Yii2)",
 	"type" : "portalium-theme",
 	"license": "MIT",
 	"homepage" : "https://portalium.dev",
@@ -12,7 +12,7 @@
 		}
 	],
 	"support" : {
-		"issues" : "https://github.com/portalium/portalium-theme/issues"
+		"issues" : "https://github.com/portalium/yii2-theme/issues"
 	},
 	"autoload" : {
 		"psr-4" : {
