--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
 	"name" : "portalium/yii2-theme",
 	"description" : "Theme Store Module for Portalium(Yii2)",
-	"type" : "portalium-theme",
+	"type" : "yii2-theme",
 	"license": "MIT",
 	"homepage" : "https://portalium.dev",
 	"authors" : [
